// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Copyright with news service context 1`] = `
.c0 {
  font-size: 0.75em;
  line-height: 1em;
  background-color: rgba(34,34,34,0.75);
  text-transform: uppercase;
  color: #FFFFFF;
  padding: 0.25rem 0.5rem;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 0;
}

<p
  className="c0"
  role="text"
>
  <span
    className="hbhUhz"
  >
    Image source, 
  </span>
  This is some copyright text
</p>
`;

exports[`should render Copyright with persian service context 1`] = `
.c0 {
  font-size: 0.75em;
  line-height: 1em;
  background-color: rgba(34,34,34,0.75);
  text-transform: uppercase;
  color: #FFFFFF;
  padding: 0.25rem 0.5rem;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 0;
}

<p
  className="c0"
  role="text"
>
  <span
    className="hbhUhz"
  >
     ، منبع تصویر
  </span>
  توصیف چیزی که اتفاق می افتد
</p>
`;
